[gd_scene load_steps=5 format=2]

[ext_resource path="res://images/Light_Green.png" type="Texture" id=1]
[ext_resource path="res://images/Light_Red.png" type="Texture" id=2]
[ext_resource path="res://images/Light_Off.png" type="Texture" id=3]
[ext_resource path="res://levels/dungeon/DungeonPuzzle.gd" type="Script" id=4]

[node name="DungeonPuzzle" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backgroundShadow" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.180392 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stoneBG" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -334.5
margin_top = -185.0
margin_right = 334.5
margin_bottom = 185.0
color = Color( 0.478431, 0.478431, 0.478431, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control"]
margin_left = 236.0
margin_top = 270.0
margin_right = 356.0
margin_bottom = 390.0
toggle_mode = true
text = "bat"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 440.0
margin_top = 250.0
margin_right = 560.0
margin_bottom = 370.0
toggle_mode = true
text = "snake"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 659.109
margin_top = 250.0
margin_right = 779.109
margin_bottom = 370.0
toggle_mode = true
text = "bird"

[node name="Light_Off" type="Sprite" parent="Control"]
position = Vector2( 523, 174 )
texture = ExtResource( 3 )

[node name="Light_Green" type="Sprite" parent="Control"]
visible = false
position = Vector2( 523, 174 )
texture = ExtResource( 1 )

[node name="Light_Red" type="Sprite" parent="Control"]
visible = false
position = Vector2( 523, 174 )
texture = ExtResource( 2 )

[node name="Button4" type="Button" parent="Control"]
margin_left = 877.039
margin_top = 12.6992
margin_right = 1004.04
margin_bottom = 123.699
text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Control/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Control/Button4" to="." method="_on_Button4_pressed"]
